@@ -34,3 +34,4 @@
 ( cvs diff -u -r 1.1.2.25 -r 1.1.2.26 src/fancy_viewer.c;  ) > 0.9.8cvs3.patchset
 ( cvs diff -u -r 1.1.2.38 -r 1.1.2.39 configure.ac;  diff -u /dev/null po/ca.po;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 po/cs.po;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 po/fi.po;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 po/hu.po;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 po/id.po;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 po/ja.po;  diff -u /dev/null po/nl.po;  diff -u /dev/null po/sk.po;  ) > 0.9.8cvs4.patchset
 ( cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/fancy_prefs.c;  ) > 0.9.9cvs1.patchset
+( cvs diff -u -r 1.1.2.26 -r 1.1.2.27 src/fancy_viewer.c;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/fancy_viewer.h;  ) > 0.9.9cvs2.patchset
