@@ -1,3 +1,10 @@
+2010-02-09 [sal]	0.9.9cvs2
+
+	* src/fancy_viewer.c
+	* src/fancy_viewer.h
+            Add support for libsoup-gnome
+            Patch by nebojsa with slight change
+
 2010-01-31 [paul]	0.9.9cvs1
 
 	* src/fancy_prefs.c
